fix icon break on register, include leaflet but not showing tiles

--- a/client/styles.css
+++ b/client/styles.css
@@ -13,6 +13,9 @@ body {
     /* background: rgba(250, 250, 250, .05) !important */
     /* background: #0e0e44 !important; */
 }
+
+#mapid { height: 500px; }
+
 .ui.cards > .card {
     margin-bottom: 0px !important;
     /*margin-top:  !important;*/
